ASSEMBLY = Banshee.Foo1
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.Foo1/Foo1Source.cs \
	Banshee.Foo1/Foo1SourceContents.cs \
	Bpm/BpmDetectJob.cs \
	Data/DataHandler.cs \
	Data/DataParser.cs \
	Data/NoNoiseDBHandler.cs \
	lastfm-sharp/Lib.cs \
	lastfm-sharp/RequestParameters.cs \
	lastfm-sharp/Scrobbling/AuthenticationFailureException.cs \
	lastfm-sharp/Scrobbling/BadAuthenticationDetailsException.cs \
	lastfm-sharp/Scrobbling/BadSessionException.cs \
	lastfm-sharp/Scrobbling/BannedClientException.cs \
	lastfm-sharp/Scrobbling/Connection.cs \
	lastfm-sharp/Scrobbling/Entry.cs \
	lastfm-sharp/Scrobbling/NowplayingTrack.cs \
	lastfm-sharp/Scrobbling/PlaybackSource.cs \
	lastfm-sharp/Scrobbling/Request.cs \
	lastfm-sharp/Scrobbling/ScrobbleManager.cs \
	lastfm-sharp/Scrobbling/ScrobbleMode.cs \
	lastfm-sharp/Scrobbling/ScrobblingException.cs \
	lastfm-sharp/Scrobbling/WrongTimeException.cs \
	lastfm-sharp/Services/Album.cs \
	lastfm-sharp/Services/AlbumImageSize.cs \
	lastfm-sharp/Services/AlbumSearch.cs \
	lastfm-sharp/Services/AlbumWiki.cs \
	lastfm-sharp/Services/Artist.cs \
	lastfm-sharp/Services/ArtistBio.cs \
	lastfm-sharp/Services/ArtistSearch.cs \
	lastfm-sharp/Services/AuthenticatedUser.cs \
	lastfm-sharp/Services/AuthenticationRequiredException.cs \
	lastfm-sharp/Services/Base.cs \
	lastfm-sharp/Services/Country.cs \
	lastfm-sharp/Services/Event.cs \
	lastfm-sharp/Services/EventAttendance.cs \
	lastfm-sharp/Services/Gender.cs \
	lastfm-sharp/Services/Global.cs \
	lastfm-sharp/Services/Group.cs \
	lastfm-sharp/Services/GroupMembers.cs \
	lastfm-sharp/Services/IHasImage.cs \
	lastfm-sharp/Services/IHasURL.cs \
	lastfm-sharp/Services/IHasWeeklyAlbumCharts.cs \
	lastfm-sharp/Services/IHasWeeklyArtistCharts.cs \
	lastfm-sharp/Services/IHasWeeklyTrackCharts.cs \
	lastfm-sharp/Services/ImageSize.cs \
	lastfm-sharp/Services/InvalidPageException.cs \
	lastfm-sharp/Services/IShareable.cs \
	lastfm-sharp/Services/ITaggable.cs \
	lastfm-sharp/Services/Library.cs \
	lastfm-sharp/Services/LibraryAlbum.cs \
	lastfm-sharp/Services/LibraryAlbums.cs \
	lastfm-sharp/Services/LibraryArtist.cs \
	lastfm-sharp/Services/LibraryArtists.cs \
	lastfm-sharp/Services/LibraryItem.cs \
	lastfm-sharp/Services/LibraryTrack.cs \
	lastfm-sharp/Services/LibraryTracks.cs \
	lastfm-sharp/Services/Pages.cs \
	lastfm-sharp/Services/PastEvents.cs \
	lastfm-sharp/Services/Period.cs \
	lastfm-sharp/Services/Playlist.cs \
	lastfm-sharp/Services/Recipients.cs \
	lastfm-sharp/Services/RecommendedArtists.cs \
	lastfm-sharp/Services/RecommendedEvents.cs \
	lastfm-sharp/Services/Request.cs \
	lastfm-sharp/Services/Search.cs \
	lastfm-sharp/Services/ServiceException.cs \
	lastfm-sharp/Services/Session.cs \
	lastfm-sharp/Services/SiteLanguage.cs \
	lastfm-sharp/Services/Tag.cs \
	lastfm-sharp/Services/TagCollection.cs \
	lastfm-sharp/Services/TagSearch.cs \
	lastfm-sharp/Services/Tasteometer.cs \
	lastfm-sharp/Services/TopAlbum.cs \
	lastfm-sharp/Services/TopArtist.cs \
	lastfm-sharp/Services/TopFan.cs \
	lastfm-sharp/Services/TopItem.cs \
	lastfm-sharp/Services/TopTag.cs \
	lastfm-sharp/Services/TopTrack.cs \
	lastfm-sharp/Services/Track.cs \
	lastfm-sharp/Services/TrackSearch.cs \
	lastfm-sharp/Services/TrackWiki.cs \
	lastfm-sharp/Services/User.cs \
	lastfm-sharp/Services/Venue.cs \
	lastfm-sharp/Services/VenuePastEvents.cs \
	lastfm-sharp/Services/VenueSearch.cs \
	lastfm-sharp/Services/WeeklyAlbumChart.cs \
	lastfm-sharp/Services/WeeklyAlbumChartItem.cs \
	lastfm-sharp/Services/WeeklyArtistChart.cs \
	lastfm-sharp/Services/WeeklyArtistChartItem.cs \
	lastfm-sharp/Services/WeeklyChart.cs \
	lastfm-sharp/Services/WeeklyChartItem.cs \
	lastfm-sharp/Services/WeeklyChartTimeSpan.cs \
	lastfm-sharp/Services/WeeklyTrackChart.cs \
	lastfm-sharp/Services/WeeklyTrackChartItem.cs \
	lastfm-sharp/Services/Wiki.cs \
	lastfm-sharp/Services/XSPF.cs \
	lastfm-sharp/Utilities.cs \
	Mirage/Analyzer.cs \
	Mirage/AudioDecoder.cs \
	Mirage/Dbg.cs \
	Mirage/Matrix.cs \
	Mirage/Mfcc.cs \
	Mirage/Scms.cs \
	Mirage/ScmsConfiguration.cs \
	Mirage/Vector.cs \
	PCA/PCAnalyzer.cs

RESOURCES =  \
	Foo1.addin.xml \
	Mirage/Resources/dct.filter \
	Mirage/Resources/filterweights.filter

include $(top_srcdir)/build/build.mk
