SUBDIRS = \
    NoNoise
#    ClutterFlow
#	AlarmClock \
#	Ampache \
#	AppIndicator \
#	Awn \
#	 
#	CoverWallpaper \
#	Jamendo \
#	LastfmFingerprint \
#	LCD \
#	Lirc \
#	LiveRadio \
#	Lyrics \
#	Magnatune \
#	Mirage \
#	OpenVP \
#	RadioStationFetcher \
#	RandomByLastfm \
#	StreamRecorder \
 #       Karaoke \
#	Telepathy \
#	ZeitgeistDataprovider

EXTRA_DIST = AssemblyInfo.cs.in

MAINTAINERCLEANFILES = Makefile.in
