SOURCES =  \
	Banshee.Cluttertest/Cluster.cs \
	Banshee.Cluttertest/ClutterHelper.cs \
	Banshee.Cluttertest/CluttertestSource.cs \
	Banshee.Cluttertest/ClutterView.cs \
	Banshee.Cluttertest/Gui.cs \
	Banshee.Cluttertest/Point.cs \
	Banshee.Cluttertest/PointGroup.cs \
	Banshee.Cluttertest/QuadTree.cs \
	Banshee.Cluttertest/View.cs 

LINK =  \
	$(BANSHEE_LIBS) \
	$(CLUTTER_SHARP_LIBS) 

ASSEMBLY = Banshee.Cluttertest

RESOURCES = Cluttertest.addin.xml

include $(top_srcdir)/build/build.mk
