SOURCES =  \
	NoNoise/Visualization/Util/ClutterHelper.cs \
	Banshee.NoNoise/CluttertestSource.cs \
	NoNoise/Visualization/Gui/MainGui.cs \
	NoNoise/Visualization/Util/Point.cs \
	NoNoise/Visualization/SongGroup.cs \
	NoNoise/Visualization/Util/QuadTree.cs \
	NoNoise/Visualization/View.cs \
	NoNoise/Visualization/SongActor.cs \
	NoNoise/Visualization/SongPoint.cs \
	NoNoise/Visualization/SongPointManager.cs \
	NoNoise/Visualization/SongActorManager.cs

LINK =  \
	$(BANSHEE_LIBS) \
	$(CLUTTER_SHARP_LIBS) 

ASSEMBLY = Banshee.Cluttertest

RESOURCES = Cluttertest.addin.xml

#EXTRA_DIST = \
#	Data/airport_locations.tsv

include $(top_srcdir)/build/build.mk
